<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddItemFragment">

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/count_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/count_title"
        app:layout_constraintStart_toStartOf="@id/name_input"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/count_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/count_title"
        app:layout_constraintTop_toBottomOf="@id/count_title"
        android:layout_marginHorizontal="20dp"
        android:inputType="number"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/count_input"
        app:layout_constraintTop_toBottomOf="@id/count_input"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp">

        <RadioButton
            android:id="@+id/food_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_radiobutton"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/drink_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drink_radiobutton"/>

        <RadioButton
            android:id="@+id/health_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_radiobutton"/>

        <RadioButton
            android:id="@+id/home_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_radiobutton"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_marginEnd="50dp"
            />

        <Button
            android:id="@+id/add_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>